[tool.poetry]
name = "tfrlrl"
version = "0.0.0"
description = "Yet another Python RL library"
authors = ["Thomas Furmston <tfurmston@googlemail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tfurmston/tfrlrl"

[tool.poetry.build]
generate-setup-file = false

# Requirements
[tool.poetry.dependencies]
python = "~3.10"
gym = "^0.21.0"
ray = "^1.10.0"
numpy = "^1.24.2"
setuptools = "65.5.0"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
flake8-logging-format = "^0.6.0"
flake8-blind-except = "^0.2.0"
flake8-quotes = "^3.3"
isort = "^5.9.3"
pytest = "^6.2"
pytest-cov = "^2.8"
pytest-mock = "^3.5"
pytest-random-order = "^1.0.4"
pytest-sugar = "^0.9"
tox = "^3.18"
hypothesis = "^6.36.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
